--- a/pages/2711.html
+++ b/pages/2711.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,7 +308,11 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+    <blockquote>
+<p>This entry is about the concept in <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a>, specifically in <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a>/<a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>/<a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>. For the concept in <a class='existingWikiWord' href='/nlab/show/chemistry'>chemistry</a> see at <a class='existingWikiWord' href='/nlab/show/periodic+table+of+chemical+elements'>chemical element</a>.</p>
+</blockquote>
+
+<div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -721,7 +725,7 @@ margin-left: 0em;
 
 <li>An <a class='existingWikiWord' href='/nlab/show/object'>object</a> in a <a class='existingWikiWord' href='/nlab/show/category'>category</a>;</li>
 
-<li>in general, <math class='maruku-mathml' display='inline' id='mathml_e0ae9ec8b2a71a019fff75703b42783305c20c93_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/k-morphism'>morphisms</a> or <math class='maruku-mathml' display='inline' id='mathml_e0ae9ec8b2a71a019fff75703b42783305c20c93_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-cells in an <math class='maruku-mathml' display='inline' id='mathml_e0ae9ec8b2a71a019fff75703b42783305c20c93_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/infinity-category'>category</a>;</li>
+<li>in general, <math class='maruku-mathml' display='inline' id='mathml_d3a7cee229116b0fc7bbb3f6a7c52706124c1faa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/k-morphism'>morphisms</a> or <math class='maruku-mathml' display='inline' id='mathml_d3a7cee229116b0fc7bbb3f6a7c52706124c1faa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-cells in an <math class='maruku-mathml' display='inline' id='mathml_d3a7cee229116b0fc7bbb3f6a7c52706124c1faa_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/infinity-category'>category</a>;</li>
 </ul>
 
 <p>
@@ -731,14 +735,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  8, 2014 15:32:58 
+  Revised on November 30, 2017 04:59:30 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.106.24)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/element" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/element/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/element" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/element" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/element" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/element/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/element" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/element" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
