--- a/pages/18807.html
+++ b/pages/18807.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      atom (physics) in nLab
+      hydrogen atom in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      atom (physics)
+      hydrogen atom
   </h1>
 
 
@@ -308,11 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <blockquote>
-<p>This entry is about the concept in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>. For other notions of the same name see <a class='existingWikiWord' href='/nlab/show/atom+%28disambiguation%29'>atom (disambiguation)</a></p>
-</blockquote>
-
-<div class='rightHandSide'>
+    <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -1041,69 +1037,44 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#terminlogy'>Terminlogy</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> an <em>atom</em> is a <a class='existingWikiWord' href='/nlab/show/bound+state'>bound state</a> of a <a class='existingWikiWord' href='/nlab/show/nucleus'>nucleus</a> and a shell of <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a>, where the nucleus itself is a bound state of <a class='existingWikiWord' href='/nlab/show/proton'>protons</a> and <a class='existingWikiWord' href='/nlab/show/neutron'>neutrons</a>, which themselves are bound states of <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, which, finally, in the present <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, are <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>elementary particles</a>, as are the <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a> in the shell of the atom.</p>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/chemistry'>chemistry</a> the different types of atoms that exist are also called <em><a class='existingWikiWord' href='/nlab/show/periodic+table+of+chemical+elements'>chemical elements</a></em>. Their <a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> in turn are called <em><a class='existingWikiWord' href='/nlab/show/molecule'>molecules</a></em>. The <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a> of the <a class='existingWikiWord' href='/nlab/show/element'>elements</a> that is captured by the <span class='newWikiWord'>periodic table of the elements<a href='/nlab/new/periodic+table+of+the+elements'>?</a></span> is explained by the <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a> of atoms. This transition area between <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a> and <a class='existingWikiWord' href='/nlab/show/chemistry'>chemistry</a> is called <em><a class='existingWikiWord' href='/nlab/show/quantum+chemistry'>quantum chemistry</a></em>.</p>
-
-<h2 id='terminlogy'>Terminlogy</h2>
-
-<p>When the term <em>atom</em> (“indivisible”) for these physical objects was established, the inner structure of atoms was not known yet. Similarly what today are called <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>elementary</a> (hence again: indivisible) <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> are subject to speculation that they might be compound after all (e.g. in <a class='existingWikiWord' href='/nlab/show/technicolor'>technicolor</a> models, or <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>).</p>
-
-<h2 id='examples'>Examples</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen atom</a></li>
-</ul>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/chemistry'>chemistry</a>, <a class='existingWikiWord' href='/nlab/show/periodic+table+of+chemical+elements'>chemical element</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/molecule'>molecule</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/particle'>particle</a></p>
-</li>
-
-<li>
-<p><span class='newWikiWord'>periodic table of the elements<a href='/nlab/new/periodic+table+of+the+elements'>?</a></span></p>
-</li>
-</ul>
+<p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>, the <a class='existingWikiWord' href='/nlab/show/atom+%28physics%29'>atom</a> whose <a class='existingWikiWord' href='/nlab/show/nucleus'>nucleus</a> consists of a single <a class='existingWikiWord' href='/nlab/show/proton'>proton</a> and whose shell contains a single <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> is called the <em>hydrogen atom</em>.</p>
 
 <h2 id='references'>References</h2>
+
+<ul>
+<li>Luca Nann, <em>The hydrogen atom: a review of the Birth of Modern Quantum Mechanics</em> (<a href='https://arxiv.org/abs/1501.05894'>arXiv:1501.05894</a>)</li>
+</ul>
 
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Atom'>Atom (physics)</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Hydrogen_atom'>Hydrogen atom</a></em></li>
 </ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 30, 2017 04:58:05 
+  Revised on November 30, 2017 04:48:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/atom+%28physics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/atom+%28physics%29/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/atom+%28physics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/atom+%28physics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hydrogen+atom" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hydrogen+atom/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/hydrogen+atom" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hydrogen+atom" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/atom+%28physics%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/hydrogen+atom" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/atom+%28physics%29" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/hydrogen+atom" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/atom+%28physics%29" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/hydrogen+atom" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
