--- a/pages/10306.html
+++ b/pages/10306.html
@@ -1040,7 +1040,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/bound+state'>bound state</a> of three <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, hence a <a class='existingWikiWord' href='/nlab/show/baryon'>baryon</a>.</p>
+<p>A <em>neutron</em> is a <a class='existingWikiWord' href='/nlab/show/bound+state'>bound state</a> of three <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, hence a <a class='existingWikiWord' href='/nlab/show/baryon'>baryon</a>.</p>
+
+<p>The bound states of <a class='existingWikiWord' href='/nlab/show/proton'>protons</a> and <a class='existingWikiWord' href='/nlab/show/neutron'>neutrons</a> are called <a class='existingWikiWord' href='/nlab/show/nucleus+%28physics%29'>nuclei</a>, the core of <a class='existingWikiWord' href='/nlab/show/atom'>atoms</a>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -1184,6 +1186,8 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<p>See also</p>
+
 <ul>
 <li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Neutron'>Neutron</a></em></li>
 </ul>
@@ -1193,14 +1197,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 23, 2017 05:36:15 
+  Revised on November 30, 2017 05:16:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.109.125.236)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/neutron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/neutron/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/neutron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/neutron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/neutron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/neutron/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/neutron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/neutron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
