--- a/pages/17862.html
+++ b/pages/17862.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/chemistry'>chemistry</a>, the <em>periodic table</em> is an arrangement of the chemical elements, originally due to the nineteenth century Russian scientist Dmitri Mendeleev, and now understood as displaying the common behaviors of families of elements according to the pattern of occupation of the outer electron shell.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/chemistry'>chemistry</a>, the <em>periodic table of chemical elements</em> is an arrangement of the <a class='existingWikiWord' href='/nlab/show/chemical+elements'>chemical elements</a>, originally due to the nineteenth century Russian scientist Dmitri Mendeleev, and now understood as displaying the common behaviors of families of elements according to the pattern of occupation of the outer electron shell.</p>
 
 <p>An explanation of the order of the elements may be given in terms of the <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a> of <a class='existingWikiWord' href='/nlab/show/atom+%28physics%29'>atoms</a> (<a class='existingWikiWord' href='/nlab/show/quantum+chemistry'>quantum chemistry</a>); for a lucid presentation by <a class='existingWikiWord' href='/nlab/show/Richard+Feynman'>Richard Feynman</a>, see (<a href='#Feynman63'>Feynman 63</a>).</p>
 
@@ -332,19 +332,18 @@ margin-left: 0em;
 </p>
 
 <p>
- 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on June 29, 2017 20:38:25 
-  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
-  (24.146.226.222)
+  Revised on November 30, 2017 05:00:43 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/periodic+table+of+chemical+elements" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/periodic+table+of+chemical+elements/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/periodic+table+of+chemical+elements" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/periodic+table+of+chemical+elements" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/periodic+table+of+chemical+elements" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/periodic+table+of+chemical+elements/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/periodic+table+of+chemical+elements" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/periodic+table+of+chemical+elements" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
