--- a/pages/18810.html
+++ b/pages/18810.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      quantum chemistry in nLab
+      nucleus (disambiguation) in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      quantum chemistry
+      nucleus (disambiguation)
   </h1>
 
 
@@ -308,48 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>Since the nature of <a class='existingWikiWord' href='/nlab/show/atom'>atoms</a> is described by <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a> and since <a class='existingWikiWord' href='/nlab/show/chemistry'>chemistry</a> deals with <a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of atoms – <a class='existingWikiWord' href='/nlab/show/molecule'>molecules</a> – it is ultimately based on <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a>, but typically the detailed quantum mechanical processes are heavily coarse-grained to effective laws of chemistry. In contrast to this <em>quantum chemistry</em> studies chemical effects explicitly with more of the detailed quantum mechanics underlying them taken into account. For example, quantum mechanics may be used to explain the <a class='existingWikiWord' href='/nlab/show/periodic+table+of+chemical+elements'>periodic table of chemical elements</a> through the occupation of their electron shells (<a href='#Feynman63'>Feynman63</a>).</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/quantum+biology'>quantum biology</a></li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<ul>
+    <ul>
 <li>
-<p>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Quantum_chemistry'>Quantum chemistry</a></em></p>
+<p><a class='existingWikiWord' href='/nlab/show/nucleus'>nucleus</a> (in <a class='existingWikiWord' href='/nlab/show/point-free+topology'>point-free topology</a>)</p>
 </li>
 
-<li id='Feynman63'>
-<p><a class='existingWikiWord' href='/nlab/show/Richard+Feynman'>Richard Feynman</a>, <em>The Feynman Lectures on Physics, vol III</em>, Chapter 19, <a href='http://www.feynmanlectures.caltech.edu/III_toc.html'>Lectures</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/nucleus+%28physics%29'>nucleus (physics)</a></p>
 </li>
 </ul>
+
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/disambiguation'>disambiguation</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on November 30, 2017 05:18:21 
+  Created on November 30, 2017 05:12:56 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+chemistry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+chemistry/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/quantum+chemistry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+chemistry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/nucleus+%28disambiguation%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/quantum+chemistry" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/nucleus+%28disambiguation%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/quantum+chemistry" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/nucleus+%28disambiguation%29" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/quantum+chemistry" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/nucleus+%28disambiguation%29" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
