--- a/pages/272.html
+++ b/pages/272.html
@@ -387,7 +387,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
@@ -1127,7 +1127,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#axioms'>Axioms</a></li><li><a href='#theorems_2'>Theorems</a></li><li><a href='#properties'>Properties</a></li><li><a href='#Examples'>Examples</a><ul><li><a href='#FreeScalarField'>Free scalar field / Klein Gordon field</a></li><li><a href='#free_fermion__dirac_field'>Free fermion / Dirac field</a></li><li><a href='#electromagnetic_field'>Electromagnetic field</a></li><li><a href='#proca_field'>Proca field</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#axioms_2'>Axioms</a></li><li><a href='#textbooks'>Textbooks</a></li><li><a href='#reviews'>Reviews</a></li><li><a href='#ExamplesReferences'>Examples</a></li><li><a href='#LocalGaugeTheory'>Local gauge theory</a></li><li><a href='#ReferencesPerturbationTheory'>Perturbation theory and renormalization</a></li><li><a href='#further_developments'>Further developments</a></li><li><a href='#relation_to_functorial_qft'>Relation to functorial QFT</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#axioms'>Axioms</a></li><li><a href='#theorems_2'>Theorems</a></li><li><a href='#properties'>Properties</a></li><li><a href='#Examples'>Examples</a><ul><li><a href='#FreeScalarField'>Free scalar field / Klein Gordon field</a></li><li><a href='#free_fermion__dirac_field'>Free fermion / Dirac field</a></li><li><a href='#electromagnetic_field'>Electromagnetic field</a></li><li><a href='#proca_field'>Proca field</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#axioms_2'>Axioms</a></li><li><a href='#lecture_notes_and_textbooks'>Lecture notes and Textbooks</a></li><li><a href='#reviews'>Reviews</a></li><li><a href='#ExamplesReferences'>Examples</a></li><li><a href='#LocalGaugeTheory'>Local gauge theory</a></li><li><a href='#ReferencesPerturbationTheory'>Perturbation theory and renormalization</a></li><li><a href='#further_developments'>Further developments</a></li><li><a href='#relation_to_functorial_qft'>Relation to functorial QFT</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p><strong>Algebraic Quantum Field Theory</strong> or <strong>Axiomatic Quantum Field Theory</strong> or <strong>AQFT</strong> for short is a formalization of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> (and specifically full, hence <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative quantum field theory</a>) that axiomatizes the assignment of <em><a class='existingWikiWord' href='/nlab/show/observable'>algebras of observables</a></em> to patches of parameter space (<a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a>, <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldvolume</a>) that one expects a quantum field theory to provide.</p>
@@ -1216,7 +1216,7 @@ margin-left: 0em;
 
 <h2 id='properties'>Properties</h2>
 
-<p>Generically the algebra of a relativistic AQFT turns out to be a (<a class='existingWikiWord' href='/nlab/show/generalized+the'>the</a>) hyperfinite type <math class='maruku-mathml' display='inline' id='mathml_1ab03aaed2992784791bed87c65be7390a5315c7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>III</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>III_1</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra+factor'>von Neumann algebra factor</a>. See (<a href='#Yngvason'>Yngvason</a>)</p>
+<p>Generically the algebra of a relativistic AQFT turns out to be a (<a class='existingWikiWord' href='/nlab/show/generalized+the'>the</a>) hyperfinite type <math class='maruku-mathml' display='inline' id='mathml_ea5f6c41e238f2d8a232675652fb690340e1cff2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>III</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>III_1</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra+factor'>von Neumann algebra factor</a>. See (<a href='#Yngvason'>Yngvason</a>)</p>
 
 <h2 id='Examples'>Examples</h2>
 
@@ -1314,11 +1314,11 @@ margin-left: 0em;
 
 <p>The generalization of the <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/site'>site</a> from open in <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski space</a> to more general and <a class='existingWikiWord' href='/nlab/show/curvature'>curved</a> spacetimes (see <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a>) is due to</p>
 
-<ul id='BrunettiFredenhagen'>
-<li><a class='existingWikiWord' href='/nlab/show/Romeo+Brunetti'>Romeo Brunetti</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>Quantum field theory on curved spacetimes</em> <a href='http://arxiv.org/abs/0901.2063'>arXiv:0901.2063</a></li>
-</ul>
-
 <ul>
+<li id='BrunettiFredenhagen'>
+<p><a class='existingWikiWord' href='/nlab/show/Romeo+Brunetti'>Romeo Brunetti</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>Quantum field theory on curved spacetimes</em> <a href='http://arxiv.org/abs/0901.2063'>arXiv:0901.2063</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Romeo+Brunetti'>Romeo Brunetti</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <a class='existingWikiWord' href='/nlab/show/Rainer+Verch'>Rainer Verch</a>, <em>The generally covariant locality principle – A new paradigm for local quantum physics</em> Commun. Math. Phys. 237:31-68 (2003) (<a href='http://arxiv.org/abs/math-ph/0112041'>arXiv:math-ph/0112041</a>)</p>
 </li>
@@ -1330,7 +1330,13 @@ margin-left: 0em;
 
 <p>See also <em><a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a></em> .</p>
 
-<h3 id='textbooks'>Textbooks</h3>
+<h3 id='lecture_notes_and_textbooks'>Lecture notes and Textbooks</h3>
+
+<p>Introductory lecture notes include</p>
+
+<ul>
+<li id='Fredenhagen03'><a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>Algebraische Quantenfeldtheorie</em>, lecture notes, 2003 (<a class='existingWikiWord' href='/nlab/files/FredenhagenAQFT2003.pdf' title='pdf'>pdf</a>)</li>
+</ul>
 
 <p>Classical textbooks are</p>
 
@@ -1541,7 +1547,7 @@ margin-left: 0em;
 <p>A relation to <a class='existingWikiWord' href='/nlab/show/FQFT'>FQFT</a> is discussed in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Urs+Schreiber'>Urs Schreiber</a>, <em>AQFT from <math class='maruku-mathml' display='inline' id='mathml_1ab03aaed2992784791bed87c65be7390a5315c7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-functorial QFT</em> , Comm. Math. Phys., Volume 291, Issue 2, pp.357-401 (<a href='http://ncatlab.org/schreiber/files/AQFTfromFQFT.pdf'>pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Urs+Schreiber'>Urs Schreiber</a>, <em>AQFT from <math class='maruku-mathml' display='inline' id='mathml_ea5f6c41e238f2d8a232675652fb690340e1cff2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-functorial QFT</em> , Comm. Math. Phys., Volume 291, Issue 2, pp.357-401 (<a href='http://ncatlab.org/schreiber/files/AQFTfromFQFT.pdf'>pdf</a>)</li>
 </ul>
 
 <p>The role of <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra+factor'>von Neumann algebra factor</a>s is discussed in</p>
@@ -1556,14 +1562,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 28, 2017 07:43:00 
+  Revised on November 30, 2017 09:26:58 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (195.37.234.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AQFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT/63" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(63 revisions)</span> | <a href="/nlab/show/diff/AQFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AQFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT/64" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(64 revisions)</span> | <a href="/nlab/show/diff/AQFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
