--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,61 +308,30 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='num_prop' id='NoethersFirstTheorem'>
-<h6 id='proposition'>Proposition</h6>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4d743bc2d0da2e88e13d5da5d9258306a5e50152_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>D</mi> <mi>μ</mi></msub><msup><mi>f</mi> <mrow><mi>α</mi><mi>μ</mi><mi>ν</mi></mrow></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+  D_\mu f^{\alpha \mu \nu} = 0
 
-<p><strong>(<a class='existingWikiWord' href='/nlab/show/Noether%27s+theorem'>Noether&#39;s theorem</a> I)</strong></p>
-
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>E</mi><mo>,</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(E,\mathbf{L})</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> (def. \ref{LocalLagrangianDensityOnSecondOrderJetBundleOfTrivialVectorBundleOverMinkowskiSpacetime}).</p>
-
-<p>If <math class='maruku-mathml' display='inline' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi></mrow><annotation encoding='application/x-tex'>v</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/symmetry+of+a+Lagrangian+density'>infinitesimal symmetry of the Lagrangian</a> (def. \ref{SymmetriesAndConservedCurrents}) with <math class='maruku-mathml' display='inline' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℒ</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>=</mo><mi>d</mi><msub><mover><mi>J</mi><mo stretchy='false'>˜</mo></mover> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub></mrow><annotation encoding='application/x-tex'>\mathcal{L}_{\hat v} \mathbf{L} = d \tilde J_{\hat v}</annotation></semantics></math>, then</p>
-<div class='maruku-equation' id='eq:NoetherCurrent'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>J</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><mo>≔</mo><msub><mover><mi>J</mi><mo stretchy='false'>˜</mo></mover> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><mo>−</mo><msub><mi>ι</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><msub><mi>Θ</mi> <mi>BFV</mi></msub></mrow><annotation encoding='application/x-tex'>
-  
-  J_{\hat v} \coloneqq \tilde J_{\hat v} - \iota_{\hat v} \Theta_{BFV}
-
-</annotation></semantics></math></div>
-<p>is an <a class='existingWikiWord' href='/nlab/show/shell'>on-shell</a> <a class='existingWikiWord' href='/nlab/show/conserved+current'>conserved current</a> (def. \ref{SymmetriesAndConservedCurrents}), for <math class='maruku-mathml' display='inline' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Θ</mi> <mi>BFV</mi></msub></mrow><annotation encoding='application/x-tex'>\Theta_{BFV}</annotation></semantics></math> a presymplectic potential (eq:PresymplecticPotential) from def. \ref{EulerLagrangeOperatorForTivialVectorBundleOverMinkowskiSpacetime}.</p>
-</div>
-
-<div class='proof'>
-<h6 id='proof'>Proof</h6>
-
-<p>By <a class='existingWikiWord' href='/nlab/show/Cartan%27s+homotopy+formula'>Cartan&#39;s homotopy formula</a> for the <a class='existingWikiWord' href='/nlab/show/Lie+derivative'>Lie derivative</a> (prop. \ref{CartanHomotopyFormula}) and the decomposition of the variational derivative <math class='maruku-mathml' display='inline' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>δ</mi><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><annotation encoding='application/x-tex'>\delta \mathbf{L}</annotation></semantics></math> (eq:dLDecomposition) and the fact that contraction <math class='maruku-mathml' display='inline' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ι</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub></mrow><annotation encoding='application/x-tex'>\iota_{\hat v}</annotation></semantics></math> with the prolongtion of an evolutionary vector field vanishes on horizontal differential forms (eq:GenericComponentsForProlongationOfEvolutionaryVectorField) and anti-commutes with the horizontal differential (eq:ProlongedEvolutionaryVectorFieldContractionAnticommutedWithHorizontalDerivative), by def. \ref{EvolutionaryVectorField}, we may re-express the defining equation for the symmetry as follows:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>d</mi><msub><mover><mi>J</mi><mo stretchy='false'>˜</mo></mover> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub></mtd> <mtd><mo>=</mo><msub><mi>ℒ</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>ι</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><munder><munder><mrow><mstyle mathvariant='bold'><mi>d</mi></mstyle><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>−</mo><mi>d</mi><msub><mi>Θ</mi> <mi>BFV</mi></msub></mrow></munder><mo>+</mo><mstyle mathvariant='bold'><mi>d</mi></mstyle><munder><munder><mrow><msub><mi>ι</mi> <mi>v</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mn>0</mn></mrow></munder></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>ι</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><mi>d</mi><msub><mi>ι</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><msub><mi>Θ</mi> <mi>BFV</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-    d \tilde J_{\hat v}
-    &amp; =
-    \mathcal{L}_{\hat v} \mathbf{L}
-    \\
-    &amp; =
-    \iota_{\hat v} \underset{= \delta_{EL}\mathbf{L} - d \Theta_{BFV}}{\underbrace{\mathbf{d} \mathbf{L}}}
-    +
-    \mathbf{d} \underset{= 0}{\underbrace{\iota_v \mathbf{L}}}
-    \\
-    &amp; =
-    \iota_{\hat v} \delta_{EL} \mathbf{L}
-    + d \iota_{\hat v} \Theta_{BFV}
-  \end{aligned}
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4d743bc2d0da2e88e13d5da5d9258306a5e50152_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>D</mi> <mi>μ</mi></msub><msup><mi>f</mi> <mrow><mi>α</mi><mi>μ</mi><mi>ν</mi></mrow></msup><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><msubsup><mi>f</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mrow><mi>α</mi><mi>μ</mi><mi>ν</mi></mrow></msubsup><mo>+</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>2</mn></mfrac></mstyle><msup><mi>γ</mi> <mi>α</mi></msup><msub><mrow></mrow> <mrow><mi>β</mi><mi>γ</mi></mrow></msub><msubsup><mi>a</mi> <mi>μ</mi> <mi>β</mi></msubsup><msup><mi>f</mi> <mrow><mi>γ</mi><mi>μ</mi><mi>ν</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>
+  D_\mu f^{\alpha \mu \nu}
+   \;\coloneqq\;
+  f^{\alpha \mu \nu}_{,\mu}
+  +
+  \tfrac{1}{2}
+    \gamma^{\alpha}{}_{\beta \gamma}
+    a^\beta_{\mu} f^{\gamma \mu \nu}
 
 </annotation></semantics></math></div>
-<p>which is equivalent to</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mover><mi>J</mi><mo stretchy='false'>˜</mo></mover> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><mo>−</mo><msub><mi>ι</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><msub><mi>Θ</mi> <mi>BFV</mi></msub></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><msub><mi>J</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub></mrow></munder><mo stretchy='false'>)</mo><mo>=</mo><msub><mi>ι</mi> <mover><mi>v</mi><mo stretchy='false'>^</mo></mover></msub><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><annotation encoding='application/x-tex'>
-  d(\underset{= J_{\hat v}}{\underbrace{\tilde J_{\hat v} - \iota_{\hat v} \Theta_{BFV}}}) = \iota_{\hat v} \delta_{EL}\mathbf{L}
-
-</annotation></semantics></math></div>
-<p>Since, by definition of the <a class='existingWikiWord' href='/nlab/show/shell'>prolonged shell</a> <math class='maruku-mathml' display='inline' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℰ</mi> <mn>∞</mn></msup></mrow><annotation encoding='application/x-tex'>\mathcal{E}^\infty</annotation></semantics></math>, the differential form on the right vanishes on <math class='maruku-mathml' display='inline' id='mathml_c760c2f8cd761f5f54157b12ae0748f92b2a7023_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> this yields the claim.</p>
-</div>
 </div>
 
 <div class="revisedby">
-  Revised on December  1, 2017 06:36:46 
+  Revised on December  1, 2017 08:57:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1311" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1311 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1312" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1312 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
