--- a/pages/10321.html
+++ b/pages/10321.html
@@ -309,10 +309,14 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#nullstellensatz'>Nullstellensatz</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#nullstellensatz'>Nullstellensatz</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The <em>zero locus</em> or <em>vanishing locus</em> of a <a class='existingWikiWord' href='/nlab/show/function'>function</a> is the set of points where it is vanishes, in that it takes the value <a class='existingWikiWord' href='/nlab/show/zero'>zero</a>.</p>
+
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_8fd37af25546571ccba3a4294913e7d5ae664034_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo lspace='verythinmathspace'>:</mo><mi>X</mi><mo>→</mo><mi>𝔸</mi></mrow><annotation encoding='application/x-tex'>f \colon X \to \mathbb{A}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/function'>function</a>, its <em>zero locus</em> i the <a class='existingWikiWord' href='/nlab/show/preimage'>preimage</a> <math class='maruku-mathml' display='inline' id='mathml_8fd37af25546571ccba3a4294913e7d5ae664034_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>f^{-1}(0)</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/zero'>zero</a>, hence the <a class='existingWikiWord' href='/nlab/show/level+set'>level set</a> at 0.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_93a7665b2577220713d8508f186bedb456fbbd4f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo lspace='verythinmathspace'>:</mo><mi>X</mi><mo>→</mo><mi>𝔸</mi></mrow><annotation encoding='application/x-tex'>f \colon X \to \mathbb{A}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/function'>function</a>, its <em>zero locus</em> is the <a class='existingWikiWord' href='/nlab/show/preimage'>preimage</a> <math class='maruku-mathml' display='inline' id='mathml_93a7665b2577220713d8508f186bedb456fbbd4f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>f^{-1}(0)</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/zero'>zero</a>, hence the <a class='existingWikiWord' href='/nlab/show/level+set'>level set</a> at 0.</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -324,7 +328,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/critical+point'>critical locus</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/critical+point'>critical locus</a>, <a class='existingWikiWord' href='/nlab/show/derived+critical+locus'>derived critical locus</a></p>
 </li>
 
 <li>
@@ -336,17 +340,21 @@ margin-left: 0em;
  
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2015 21:10:29 
-  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
-  (127.0.0.1)
+  Revised on December  8, 2017 04:56:08 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (188.96.255.201)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/zero+locus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/zero+locus/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/zero+locus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/zero+locus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/zero+locus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/zero+locus/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/zero+locus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/zero+locus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
