--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,75 +308,50 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation' id='eq:LocalCommutatorOfDerivationsOnJetBundle'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_cccd590895a864fb59729561568047c05907eeb5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mrow><mo>{</mo><mi>f</mi><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo>,</mo><mi>g</mi><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo>}</mo></mrow></mtd> <mtd><mo>≔</mo><mphantom><mo lspace='verythinmathspace' rspace='0em'>+</mo></mphantom><mrow><mo>(</mo><mrow><mo>(</mo><mfrac><mrow><msup><mi>d</mi> <mi>k</mi></msup></mrow><mrow><mi>d</mi><msup><mi>x</mi> <mrow><msub><mi>μ</mi> <mn>1</mn></msub></mrow></msup><mi>⋯</mi><mi>d</mi><msup><mi>x</mi> <mrow><msub><mi>μ</mi> <mi>k</mi></msub></mrow></msup></mrow></mfrac><mrow><mo>(</mo><mfrac><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mi>f</mi></mrow><mrow><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow></mfrac><mo>)</mo></mrow><mo>)</mo></mrow><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>g</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mi>a</mi><mo>,</mo><msub><mi>μ</mi> <mn>1</mn></msub><mi>⋯</mi><msub><mi>μ</mi> <mi>k</mi></msub></mrow> <mo>‡</mo></msubsup></mrow></mfrac><mo>)</mo></mrow><mo>−</mo><mrow><mo>(</mo><mfrac><mrow><msup><mi>d</mi> <mi>k</mi></msup></mrow><mrow><mi>d</mi><msup><mi>x</mi> <mrow><msub><mi>μ</mi> <mn>1</mn></msub></mrow></msup><mi>⋯</mi><mi>d</mi><msup><mi>x</mi> <mrow><msub><mi>μ</mi> <mi>k</mi></msub></mrow></msup></mrow></mfrac><mrow><mo>(</mo><mfrac><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mi>f</mi></mrow><mrow><mi>δ</mi><msubsup><mi>ϕ</mi> <mi>a</mi> <mo>‡</mo></msubsup></mrow></mfrac><mo>)</mo></mrow><mo>)</mo></mrow><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>g</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><msub><mi>μ</mi> <mn>1</mn></msub><mi>⋯</mi><msub><mi>μ</mi> <mi>k</mi></msub></mrow> <mi>a</mi></msubsup></mrow></mfrac><mo>)</mo></mrow><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>≔</mo></mphantom><mo>+</mo><mrow><mo>(</mo><mrow><mo>(</mo><mfrac><mrow><msup><mi>d</mi> <mi>k</mi></msup></mrow><mrow><mi>d</mi><msup><mi>x</mi> <mrow><msub><mi>μ</mi> <mn>1</mn></msub></mrow></msup><mi>⋯</mi><mi>d</mi><msup><mi>x</mi> <mrow><msub><mi>μ</mi> <mi>k</mi></msub></mrow></msup></mrow></mfrac><mrow><mo>(</mo><mfrac><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mi>f</mi></mrow><mrow><mi>δ</mi><msup><mi>c</mi> <mi>α</mi></msup></mrow></mfrac><mo>)</mo></mrow><mo>)</mo></mrow><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>g</mi></mrow><mrow><mo>∂</mo><msubsup><mi>c</mi> <mrow><mi>α</mi><mo>,</mo><msub><mi>μ</mi> <mn>1</mn></msub><mi>⋯</mi><msub><mi>μ</mi> <mi>k</mi></msub></mrow> <mo>‡</mo></msubsup></mrow></mfrac><mo>)</mo></mrow><mo>−</mo><mrow><mo>(</mo><mfrac><mrow><msup><mi>d</mi> <mi>k</mi></msup></mrow><mrow><mi>d</mi><msup><mi>x</mi> <mrow><msub><mi>μ</mi> <mn>1</mn></msub></mrow></msup><mi>⋯</mi><mi>d</mi><msup><mi>x</mi> <mrow><msub><mi>μ</mi> <mi>k</mi></msub></mrow></msup></mrow></mfrac><mrow><mo>(</mo><mfrac><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mi>f</mi></mrow><mrow><mi>δ</mi><msubsup><mi>c</mi> <mi>α</mi> <mo>‡</mo></msubsup></mrow></mfrac><mo>)</mo></mrow><mo>)</mo></mrow><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>g</mi></mrow><mrow><mo>∂</mo><msubsup><mi>c</mi> <mrow><mo>,</mo><msub><mi>μ</mi> <mn>1</mn></msub><mi>⋯</mi><msub><mi>μ</mi> <mi>k</mi></msub></mrow> <mi>α</mi></msubsup></mrow></mfrac><mo>)</mo></mrow><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b8a382862008d47334332d1a5a6494b0b97f6a2a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mrow><mo>{</mo><mi>f</mi><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo>,</mo><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mrow><mo>{</mo><mi>g</mi><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mo>−</mo><mo>}</mo></mrow><mo>}</mo></mrow><mo>−</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>f</mi><mo stretchy='false'>)</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow></msup><mrow><mo>{</mo><mi>g</mi><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo>,</mo><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mrow><mo>{</mo><mi>f</mi><mspace width='thinmathspace'></mspace><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mo>−</mo><mo>}</mo></mrow><mo>}</mo></mrow></mtd> <mtd><mo>=</mo><mrow><mo>[</mo><msub><mi>ℒ</mi> <mover><mrow><msub><mi>δ</mi> <mi>f</mi></msub></mrow><mo>^</mo></mover></msub><mo>,</mo><msub><mi>ℒ</mi> <mover><mrow><msub><mi>δ</mi> <mi>g</mi></msub></mrow><mo>^</mo></mover></msub><mo>,</mo><mo>]</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>ℒ</mi> <mover><mrow><mo stretchy='false'>[</mo><msub><mi>δ</mi> <mi>f</mi></msub><mo>,</mo><msub><mi>δ</mi> <mi>g</mi></msub><mo stretchy='false'>]</mo></mrow><mo>^</mo></mover></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \begin{aligned}
+  \left\{
+    f\, dvol_\Sigma,
+    \,,\,
     \left\{
-      f \, dvol_\Sigma,
-      g \, dvol_\Sigma
+      g\, dvol_\Sigma
+      \,,\,
+      -
     \right\}
-    &amp; \coloneqq
-    \phantom{+}
-    \left(
-    \left(
-      \frac{d^k}{d x^{\mu_1} \cdots d x^{\mu_k}}
-      \left(
-        \frac{\delta_{EL} f}{\delta \phi^a}
-      \right)
-    \right)
-    \left(
-      \frac{\partial g}{\partial {\phi}^\ddagger_{a,\mu_1 \cdots \mu_k}}
-    \right)
-    -
-    \left(
-      \frac{d^k}{d x^{\mu_1} \cdots d x^{\mu_k}}
-      \left(
-        \frac{\delta_{EL} f}{\delta \phi^\ddagger_a}
-      \right)
-    \right)
-    \left(
-      \frac{\partial g}{\partial \phi^a_{,\mu_1 \cdots \mu_k}}
-    \right)
-    \right) \, dvol_\Sigma
-    \\
-    &amp;
-    \phantom{\coloneqq}
-    +
-    \left(
-    \left(
-      \frac{d^k}{d x^{\mu_1} \cdots d x^{\mu_k}}
-      \left(
-        \frac{\delta_{EL} f}{\delta c^\alpha}
-      \right)
-    \right)
-    \left(
-      \frac{\partial g}{\partial {c}^\ddagger_{\alpha,\mu_1 \cdots \mu_k}}
-    \right)
-    -
-    \left(
-      \frac{d^k}{d x^{\mu_1} \cdots d x^{\mu_k}}
-      \left(
-        \frac{\delta_{EL} f}{\delta c^\ddagger_\alpha}
-      \right)
-    \right)
-    \left(
-      \frac{\partial g}{\partial c^\alpha_{,\mu_1 \cdots \mu_k}}
-    \right)
-    \right) \, dvol_\Sigma
+  \right\}
+  - 
+  (-1)^{deg(f) deg(g)}
+  \left\{
+    g\, dvol_\Sigma,
+    \,,\,
+    \left\{
+      f\, dvol_\Sigma
+      \,,\,
+      -
+    \right\}
+  \right\}
+  &amp; =
+  \left[
+    \mathcal{L}_{\widehat{\delta_f}},
+    \mathcal{L}_{\widehat{\delta_g}},    
+  \right]
+  \\
+  &amp; =
+  \mathcal{L}_{ \widehat{[\delta_f, \delta_g]} }
   \end{aligned}
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on December 12, 2017 06:23:07 
+  Revised on December 12, 2017 07:19:17 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1340" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1340 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1341" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1341 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
