--- a/pages/18679.html
+++ b/pages/18679.html
@@ -319,7 +319,7 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li>
@@ -339,13 +339,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><strong>scalar bosons</strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac fields</a>)</p>
 
 <ul>
 <li>
@@ -358,6 +358,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/muon'>muon</a></p>
 </li>
 </ul>
 
@@ -395,7 +399,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> (<a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a>)</p>
 </li>
 
 <li>
@@ -418,10 +422,6 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/axion'>axion</a>, <a class='existingWikiWord' href='/nlab/show/dilaton'>dilaton</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
 </li>
 
 <li>
@@ -470,17 +470,21 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Created on October 12, 2017 18:22:31 
+  Revised on December 14, 2017 11:13:17 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/auxiliary+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/auxiliary+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/auxiliary+field/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/auxiliary+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/auxiliary+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
