--- a/pages/10140.html
+++ b/pages/10140.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Marco Robalo is a Ph.D. student under the direction of <a class='existingWikiWord' href='/nlab/show/Bertrand+To%C3%ABn'>Bertrand Toen</a>.</p>
+    <p>Marco Robalo was a Ph.D. student under the direction of <a class='existingWikiWord' href='/nlab/show/Bertrand+To%C3%ABn'>Bertrand Toen</a>.</p>
 
 <ul>
 <li>
@@ -324,14 +324,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on July 21, 2013 17:59:12 
-  by <a class="existingWikiWord" href="/nlab/show/Adeel+Khan+Yusufzai">Adeel Ahmad Khan</a>
-  (85.179.139.254)
+  Revised on December 15, 2017 03:55:01 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (92.239.141.218)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Marco+Robalo" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Marco+Robalo" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Marco+Robalo/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Marco+Robalo" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Marco+Robalo" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
